@@ -132,7 +132,8 @@ void drumkv1widget_filt::paintEvent ( QPaintEvent *pPaintEvent )
 	const int w4 = w >> 2;
 	const int w8 = w >> 3;
 
-	const int ws = w8 - (w8 >> 1) * (int(m_fSlope) > 0 ? 1 : 0);
+	const int iSlope = int(m_fSlope);
+	const int ws = w8 - (w8 >> 1) * (iSlope & 1);
 
 	int x = w8 + int(m_fCutoff * float(w - w4));
 	int y = h2 - int(m_fReso * float(h + h4));
@@ -140,7 +141,7 @@ void drumkv1widget_filt::paintEvent ( QPaintEvent *pPaintEvent )
 	QPolygon poly(6);
 	QPainterPath path;
 
-	const int iType = int(m_fType);
+	const int iType = (iSlope == 3 ? 1 : int(m_fType));
 	// Low, Notch
 	if (iType == 0 || iType == 3) {
 		if (iType == 3) x -= w8;
