@@ -14,6 +14,7 @@ HEADERS = \
 	drumkv1_jack.h \
 	drumkv1_config.h \
 	drumkv1_filter.h \
+	drumkv1_formant.h \
 	drumkv1_sample.h \
 	drumkv1_wave.h \
 	drumkv1_ramp.h \
@@ -45,6 +46,7 @@ SOURCES = \
 	drumkv1_ui.cpp \
 	drumkv1_jack.cpp \
 	drumkv1_config.cpp \
+	drumkv1_formant.cpp \
 	drumkv1_sample.cpp \
 	drumkv1_wave.cpp \
 	drumkv1_nsm.cpp \
